testing/stage_12/invalid/bad_string_constant.c
int main()
{
	char *s ="hell;
	return *s;
}